--- a/src/components/PImage/PImage.scss
+++ b/src/components/PImage/PImage.scss
@@ -15,16 +15,16 @@
       cursor: pointer;
     }
   }
+}
+.zoom {
+  & > img {
+    max-width: 70vw;
+    max-height: 70vh;
+    object-fit: contain;
+  }
 
-  & > .zoom {
-    & > img {
-      max-width: 70vw;
-      max-height: 70vh;
-    }
-
-    & > .spinner {
-      background-color: rgba(color("grey", "900"), 0.3);
-      color: color("grey", "100");
-    }
+  & > .spinner {
+    background-color: rgba(color("grey", "900"), 0.3);
+    color: color("grey", "100");
   }
 }
